--- a/src/main/resources/static/css/LoginSignup.css
+++ b/src/main/resources/static/css/LoginSignup.css
@@ -88,4 +88,10 @@
     font-size: 15px;
     width: 100%;
     /* margin-top: -15px; */
+    text-transform: capitalize;
+}
+.error{
+    color: red;
+    font-size: 15px;
+    width: 100%;
 }
