otp page non-negative and css fixed

--- a/src/main/resources/templates/otp.html
+++ b/src/main/resources/templates/otp.html
@@ -27,7 +27,7 @@
                     <form th:action="@{/otpverify}" method="post">
                         <input class="otp__input" type="email" th:placeholder="email" name="email" th:value="${email}"
                             hidden readonly>
-                        <input class="otp__input" type="number" placeholder="OTP" name="otp">
+                        <input class="otp__input" type="number" placeholder="OTP" min="0" oninput="validity.valid||(value='')" name="otp">
                         <input type="submit" class="btn" value="Validate OTP">
                     </form>
                 </div>
