--- a/src/main/resources/static/css/otp.css
+++ b/src/main/resources/static/css/otp.css
@@ -1,14 +1,16 @@
 .otp__section{
+    margin-bottom: 4rem;
 }
 .otp__container{
     padding: 3rem;
 }
-.otp__box{
+.otp__box {
     width: 800px;
     /* border: 1px solid black; */
-    background: var(--color-gray-variant);
+    background: var(--color-background);
     margin: 0 auto;
     padding: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .otp{
     text-align: center;
@@ -21,7 +23,6 @@
 }
 .otp_message{
     width: 100%;
-    background: var(--color-bg);
     margin-top: 2rem;
     padding: 1rem 2rem;
     font-size: 15px;
@@ -32,13 +33,14 @@ form{
     flex-direction: column;
     align-items: center;
 }
-.otp__input{
+.otp__input {
     width: 20rem;
     height: 2.5rem;
     margin-bottom: 1rem;
     padding: .3rem 1rem;
     font-size: 18px;
-    background: var(--color-bg);
-    border: none;
+    background: var(--color-background-variant);
+    border: 1px solid var(--color-gray);
     border-radius: 7px;
+	text-align: center;
 }
