Adding and managing html and css file

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -24,7 +24,7 @@
 			<div class="left__dashboard board">
 				<div>
 					<p><a th:href="@{/riskinfo}">Sanolagani Dashboard</a></p>
-					<p><a href="#">My Information</a></p>
+					<p><a th:href="@{/myinfo}">My Information</a></p>
 					<a th:href="@{'/investmenthistory/'}">My Investment</a>
 					<div class="dropdown">
 						<button onclick="fundManagement()" class="drop-btn">Fund Management</button>
