company details page update and reconfigure

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -16,7 +16,8 @@
 
                         <h5><span>[[${company.companyname}]]</span> &nbsp; Rs. <span>[[${company.price_per_share}]]</span> per share</h5>
 <!--                        <h2>Bhoklagyo - Feeding the distanced customer with taste.</h2>-->
-                        <span id="company-id" hidden>[[${company.id}]]</span>
+<!--                        <span id="company-id" hidden>[[${company.id}]]</span>-->
+                        <input type="hidden" id="company-id" name="companyId" th:value="${company.id}">
                         <span id="pps" hidden>[[${company.price_per_share}]]</span>
                         <span id="maxq" hidden>[[${company.maximum_quantity}]]</span>
 
