--- a/src/main/resources/templates/fragment/dashboard.html
+++ b/src/main/resources/templates/fragment/dashboard.html
@@ -48,8 +48,10 @@
 
                 <div>
                     <a th:href="@{/loadfund}">Load</a>
-                    <a th:href="@{'/refund/collateral/'+${id}+'/'}">Refund</a>
+                    <a th:href="@{/refund/collateral}">Refund</a>
                 </div>
+            </div>
+
             </div>
         </div>
     </div>
