--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,11 +17,7 @@
 			<h2>Highest Invest Opportunity</h2>
 			<h5>Offerings that have raised the highest money</h5>
 			<div class="cards row">
-              
-				<div class="card " th:each="company : ${companybasedoncapital}">
-					<div th:if="${company.status eq 'raising'}">
-					<span th:text="${company.id}"></span>
-					<!-- 	<span th:text="${company.image}"></span> -->
+				<div class="card" th:each="company : ${companybasedoncapital}" th:if="${company.status eq 'raising'}">
 					<a th:href="@{/company/{id}/ (id=${company.id})}"> <img
 						th:src="@{'/documents/' + ${company.id} + '/' + ${company.image}}"
 						class='card__image' alt="card-image" />
@@ -49,7 +45,6 @@
 					<div class="division">
 						<p>Reg CF via Sanolagani Capital, Ltd.</p>
 					</div>
-				</div>
 				</div>
 			</div>
 		</div>
