--- a/src/main/resources/templates/load_fund.html
+++ b/src/main/resources/templates/load_fund.html
@@ -57,10 +57,10 @@
                     </div>
                     <div class="bank_row">
                         <label class="load-title" for="amount">AMOUNT <span style="color: red">*</span></label>
-                        <input id="paymentAmount" class="load_input" type="number" min="1" oninput="validity.valid||(value='')"
+                        <input id="total" class="load_input" type="number" min="1" oninput="validity.valid||(value='')"
                             required>
                     </div>
-                    <input type="hidden" id="companyId" name="companyId" value=0>
+                    <input type="hidden" id="company-id" name="companyId" value=0>
                     <div class="bank_row">
                         <label class="load-title" for="remarks">REMARKS <span style="color: red">*</span></label>
                         <input class="load_input" id="remarks" type="text" name="remarks" required>
