--- a/src/main/resources/templates/changeinitialpassword.html
+++ b/src/main/resources/templates/changeinitialpassword.html
@@ -18,6 +18,7 @@
         </div>
         <div class="login__right">
           <form th:action="@{/change/initial/password}" method="post">
+            <h1 class="login__heading">Change Password</h1>
    <input class="input__box" type="email" th:placeholder="email" name="email" th:value="${email}" 
                hidden readonly/>
    <input class="input__box" type="password" placeholder="Old Password" name="oldpassword"
