--- a/src/main/resources/templates/adminreport.html
+++ b/src/main/resources/templates/adminreport.html
@@ -3,14 +3,25 @@
 
 <html>
 <head>
-	
+	<style>
+    table{
+      font-size: 12px;
+    }
+    .dashboard{
+      display:grid;
+      grid-template-columns: 1fr 3fr;
+    }
+  </style>
   <title>View Users</title>
-     <link rel="stylesheet" type="text/css" href="css/viewpage.css">
-</head>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/viewpage.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/admindashboard.css}"></head>
 <body>
 	
-  <div class="container">
-    <h1>Admin Report</h1>
+  <div class="dashboard">
+    <div class="sidebar">
+      <h2>Dashboard</h2>
+      <ul th:insert="fragment/admin-dashboard.html :: dashboard-left"></ul>
+    </div>
     <table>
       <tr>
 		<th>User Id</th>
@@ -21,7 +32,7 @@
         <th>Share Quantity</th>
         <th>Share Amount</th>
         <th>Transaction Date</th>
-         <th>Transaction Type</th>
+        <th>Transaction Type</th>
         <th>Transaction Token</th>
         <th>Refundable Date</th>
         <th>Investment Status</th>
@@ -29,15 +40,15 @@
 
       </tr>
       <tr th:each="invest: ${invest_list}">
-             <td>[[${invest.getUser().getId()}]]</td>
-             <td>[[${invest.getUser().getFname()}]]</td>
+            <td>[[${invest.getUser().getId()}]]</td>
+            <td>[[${invest.getUser().getFname()}]]</td>
         	 <td>[[${invest.getUser().getEmail()}]]</td>
         	 <td>[[${invest.getCompany().getId()}]]</td>
         	 <td>[[${invest.getCompany().getCompanyname()}]]</td>
         	 <td>[[${invest.getQuantity()}]]</td>
         	 <td>[[${invest.getAmount()}]]</td>
              <td>
-                 <p th:text="${#temporals.format(invest.getTransaction().getTransaction_date_time(), 'yyyy-MM-dd') + ' ' + #temporals.format(invest.getTransaction().getTransaction_date_time(), 'HH:mm:ss')}"></p>
+                <p th:text="${#temporals.format(invest.getTransaction().getTransaction_date_time(), 'yyyy-MM-dd') + ' ' + #temporals.format(invest.getTransaction().getTransaction_date_time(), 'HH:mm:ss')}"></p>
             </td>   
             <td>[[${invest.getTransaction().getTransaction_type()}]]</td>
             <td th:if="${invest.getTransaction().getPayment_token() eq 'collateral'}">
