--- a/src/main/resources/templates/companysummary.html
+++ b/src/main/resources/templates/companysummary.html
@@ -3,14 +3,17 @@
 
 <html>
 <head>
-	
-  <title>View Company Summary</title>
-     <link rel="stylesheet" type="text/css" href="css/viewpage.css">
-</head>
+
+  <title>View Users</title>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/viewpage.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/admindashboard.css}"></head>
 <body>
 	
-  <div class="container">
-    <h1>View Company Summary</h1>
+  <div class="dashboard">
+    <div class="sidebar">
+      <h2>Dashboard</h2>
+      <ul th:insert="fragment/admin-dashboard.html :: dashboard-left"></ul>
+    </div>
     <table>
       <tr>
 		<th>Company Id</th>
@@ -25,12 +28,12 @@
       <tr th:each="company: ${company_list}">
 		     <td>[[${company.id}]]</td>
              <td>[[${company.companyname}]]</td>
-        	 <td>[[${company.previouslyraisedcapital}/${company.price_per_share}]]</td>  
-        	 <td>[[${company.previouslyraisedcapital}]]</td>
+        	 <td>[[${#numbers.formatInteger(company.previouslyraisedcapital / company.price_per_share, 3, 'COMMA')}]]</td>  
+        	 <td>Rs. [[${#numbers.formatInteger(company.previouslyraisedcapital, 3,'COMMA')}]]</td>
         	 <td>[[${totalUsersInvestedMap.get(company.getCompanyname())}]]</td>
         	 <td>[[${totalApplyShareMap.get(company.getCompanyname())}]]</td>
-        	 <td>[[${totalApplyShareMap.get(company.getCompanyname())}*${company.price_per_share}]]</td>
-        	 
+        	 <td>[[${#numbers.formatInteger(totalApplyShareMap.get(company.getCompanyname()) * company.price_per_share,3,'COMMA')}]]</td>
+
       </tr>
       <!-- Add more user rows here -->
     </table>
