--- a/src/main/resources/templates/viewinvestment.html
+++ b/src/main/resources/templates/viewinvestment.html
@@ -6,11 +6,15 @@
 	
   <title>View Investment</title>
   <link rel="stylesheet" type="text/css" href="css/viewpage.css">
+  <link rel="stylesheet" type="text/css" href="css/admindashboard.css">
 </head>
 <body>
 	
-  <div class="container">
-    <h1>View Investment</h1>
+  <div class="dashboard">
+    <div class="sidebar">
+      <h2>Dashboard</h2>
+      <ul th:insert="fragment/admin-dashboard.html :: dashboard-left"></ul>
+    </div>
     <table>
       <tr>
         <th>First Name</th>
