--- a/src/main/resources/templates/companydashboard.html
+++ b/src/main/resources/templates/companydashboard.html
@@ -16,7 +16,7 @@
             <li><a href="#">Shareholder Management</a></li>
             <li><a href="#">Financial Performance</a></li>
             <li><a href="#">Documents and Reports</a></li>
-            <li><a href="#">Notification</a></li>
+            <li><a th:href="@{/notification}">Notification</a></li>
             <li><a href="#">Setting and Account Management</a></li>
         </ul>
     </div>
