managing static and html file

--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -56,7 +56,7 @@
         <div class="notification" th:each="notification,iterStat: ${notificationlist}">
             <div class="notification-title">Notification [[${iterStat.count}]]</div>
             <div class="notification-content">[[${notification.message}]],at [[${#temporals.format(notification.createdAt, 'yyyy-MM-dd') + ' ' + #temporals.format(notification.createdAt, 'HH:mm:ss')}]]</div>
-            <div class="notification-timestamp">[[${minute}-${#temporals.format(notification.createdAt, 'mm')}]] min ago</div>
+           <div class="notification-timestamp">[[${#temporals.format(notification.createdAt, 'hh:mm a')}]]</div>
         </div>
     </div>
 </body>
