color changed and profile menu added

--- a/src/main/resources/static/css/HowToInvest.css
+++ b/src/main/resources/static/css/HowToInvest.css
@@ -1,5 +1,5 @@
 .howtoinvest{
-    background: var(--color-light-gray);
+    background: #E8E8E8;
     padding-bottom: 3rem;
 }
 .howtoinvest__info{
