--- a/src/main/resources/static/css/LoginSignup.css
+++ b/src/main/resources/static/css/LoginSignup.css
@@ -38,6 +38,7 @@
 .heading__background h2{
     padding: 0 20px;
     border-radius: 10px;
+    color: #000;
 }
 .input__box{
     line-height: 2.2rem;
@@ -51,7 +52,7 @@
     border: none;
 }
 .btn__login{
-    width: 100%;
+    width: 100%  !important;
     font-size: 18px;
     text-align: center;
 }
@@ -62,6 +63,9 @@
     margin-top: 1rem;
     text-align: center;
 }
+h5.forgot__password a {
+    color: #000;
+}
 .forgot__password:hover{
     text-decoration: underline;
     transition: var(--transition);
@@ -70,7 +74,7 @@
 .active{
     background: var(--color-blue);
     border-radius: 10px;
-    color: var(--color-white);
+    color: #fff m !important;
     transition: var(--transition);
 }
 .forgot__password-link:hover{
