--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -3,7 +3,7 @@
 
 <div class="container footer__container" th:fragment="footer">
   <div class="first">
-    <h1 class='logo'>Sanolagani</h1>
+    <h1 class='lofo footer-logo'>Sanolagani</h1>
     <h5>&copy; all rights are reserved 2023</h5>
   </div>
   <div class="second">
