--- a/src/main/resources/static/css/Header.css
+++ b/src/main/resources/static/css/Header.css
@@ -6,6 +6,7 @@
 .logo{
     font-family: 'Mogra', cursive;
     font-size: 44px;
+    color: #000;
 }
 .hover_none:hover{
     color: var(--color-dark);
