--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -34,8 +34,11 @@
 }
 
 :root {
-	--color-blue: #007BFF;
-	--color-blue-variant: #2372c7;
+	--color-dark: #000;
+	--color-white: #fff;
+	--color-blue: #0078D7;
+	--color-blue-hover: #055596;
+
 
 	--color-gray: #6C757D;
 	--color-light-gray: #B7BDBE;
@@ -46,9 +49,9 @@
 	--color-background: #f3f3f3;
 	--color-background-variant: #f9f9f9;
 	
-	--color-dark: #000;
-	--color-white: #fff;
+
 	--transition: all 400ms ease;
+
 	--container-width-lg: 75%;
 	--container-width-md: 86%;
 	--container-width-sm: 90%;
@@ -91,10 +94,6 @@ h1 {
 }
 
 section {
-	/* margin-top: 6rem; */
-	padding-top: 1rem;
-	/* margin-bottom: 5rem; */
-	/* padding-bottom: 3rem; */
 }
 
 .text-light {
@@ -102,9 +101,10 @@ section {
 }
 
 a {
-	color: var(--color-dark);
+	color: #fff;
 	transition: var(--transition);
 	font-size: 18px;
+	text-transform: capitalize;
 }
 
 .nav__link:hover {
@@ -121,10 +121,11 @@ a {
 	border: 1px solid var(--color-primary);
 	transition: var(--transition);
 	background: var(--color-blue);
+	font-size: 18px;
 }
 
 .btn:hover {
-	color: var(--color-white);
+	background: var(--color-blue-hover);
 	border-color: transparent;
 }
 
@@ -171,6 +172,46 @@ img {
 	.section {
 		margin-top: 6rem;
 	}
+}
+/* ============ profile dropdown =================== */
+.sub-menu-wrap{
+    position: absolute;
+    top: 130px;
+    right: 10%;
+    width: 290px;
+
+    max-height: 400px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+	box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+	background: #fff;
+	display: none;
+	transition: all 400ms ease;
+	/* border-radius: 10px; */
+	
+}
+.sub-menu-wrap.active-menu{
+    display: block;
+	transition: all 400ms ease;
+}
+.sub-menu-user-info h2{
+	font-size: 20px;
+    font-weight: 500;
+}
+.sub-menu{
+	padding: 0 10px;
+}
+.sub-menu-link{
+	font-size: 15px;
+}
+.sub-menu-link p{
+	margin: 5px 0;
+	color: #000;
+	transition: all 400ms ease;
+}
+.sub-menu-link p:hover{
+	margin-left: 10px;
+	transform: all 400ms ease;
 }
 
 /* =========================== SMALL DEVICES =============================== */
