--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -15,11 +15,34 @@
 			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/login}">Login</a></li>
 			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/register}">Sign Up</a></li>
 
-			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY') or hasRole('ROLE_ADMIN')"><a th:href="@{/dashboard}">portfolio</a>
+			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY') or hasRole('ROLE_ADMIN')"><a
+					th:href="@{/dashboard}">portfolio</a>
 			</li>
-			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY') or hasRole('ROLE_ADMIN')"><a th:href="@{/logout}">logout</a></li>
+			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY') or hasRole('ROLE_ADMIN')"><a
+					th:href="@{/logout}">logout</a></li>
 			<li sec>
 			</li>
+			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY') or hasRole('ROLE_ADMIN')"
+				style="position: relative; cursor: pointer; color:#fff; font-size: 18px; user-select: none;" onclick="document.querySelector('.sub-menu-wrap').classList.toggle('active-menu')"> Profile
+			</li>
+			<!-- css files are on style.css -->
+			<div class="sub-menu-wrap">
+				<div class="sub-menu">
+					<div class="sub-menu-user-info">
+						<h2>Ashant Chaudhary</h2>
+					</div>
+					<hr>
+					<a href="#" class="sub-menu-link">
+						<p>Change Password</p>
+					</a>
+					<a href="#" class="sub-menu-link">
+						<p>Help & Support</p>
+					</a>
+					<a href="#" class="sub-menu-link">
+						<p>Logout</p>
+					</a>
+				</div>
+			</div>
 		</ul>
 	</div>
 </nav>
