--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -31,12 +31,12 @@
 			<p class="error" th:text="${error}"></p>
 			<form th:action="@{/companyverify}" th:object="${un_company}" class="company_registration" method="POST"
 				enctype="multipart/form-data">
-				<div>
+				<div class="register-row">
 					<input class="register_input" type="text" placeholder="First Name" name="fname" th:field="*{fname}">
 					<input class="register_input" type="text" placeholder="Last Name" name="lname" th:field="*{lname}">
 				</div>
 
-				<div>
+				<div class="register-row">
 				<input class="register_input" type="text"
 					placeholder="Company Name" name="companyname"
 					th:field="*{companyname}">
@@ -44,53 +44,54 @@
 					placeholder="Company Adress" name="address">	
 					</div>
 
-				<div>
+				<div class="register-row">
 					<input class="register_input" type="email" placeholder="Company Email" name="email"
 						th:field="*{email}">
 					<input class="register_input" type="number" placeholder="Company Number" name="phnum"
 						th:field="*{phnum}">
 				</div>
-				<div>
+				<div class="register-row">
 					<input class="register_input" type="text" placeholder="Website URL" name="websiteurl" th:field="*{websiteurl}">
 					<input class="register_input" type="number" placeholder="Capital To Raise" name="raisedcapital" th:field="*{raisedcapital}">
 				</div>
-				<div>
+				<div class="register-row">
 					<input class="register_input" type="text" placeholder=" sector" name="sector" th:field="*{sector}">
 					<input class="register_input" type="number" placeholder=" maximum quantity" name="maximum_quantity">
 				</div>
 
-				<div>
-					<input class="register_input register" type="text" placeholder="Time Span For Raising Capital" name="timespanforraisingcapital"
+				<div class="register-row">
+					<input class="register_input" style="margin-left: 65px;" type="text" placeholder="Time Span For Raising Capital" name="timespanforraisingcapital"
 						   th:field="*{timespanforraisingcapital}">
 					<input class="register_input" type="number" placeholder="Price per Unit" name="price_per_share">
 					<br>
 				</div>
 
-				<div style="display:flex; flex-direction:column; justify-content: space-between; align-items:center;">
+				<br>
+				<div class="register-document">
 					<div>
-						<label for="companypanimg" style="width:40%">Company image</label>
-						<input class="register_input" id="companypanimg" type="file" placeholder="Company image"
-							name="com_image" style="width:40%">
+						<label for="companypanimg">Company image</label>
+						<input class="upload-doc" id="companypanimg" type="file" placeholder="Company image"
+							name="com_image">
 					</div>
 
 
 					<div>
 						<label for="pdfFile" >Company Document PDF including tax clearance: </label>
-						<input class="register_input" id="pdfFile" type="file" placeholder="Company PDF" name="pdfFile">
+						<input class="upload-doc" id="pdfFile" type="file" placeholder="Company PDF" name="pdfFile">
 					</div>
 					<div>
 						<label for="companypan">Company PAN Card/VAT Card: </label>
-						<input class="register_input" id="companypan" type="file" placeholder="CompanyPDF" name="companypan" />
+						<input class="upload-doc" id="companypan" type="file" placeholder="CompanyPDF" name="companypan" />
 					</div>
 
 					<div>
 						<label for="citizen_front">Citizen Front:</label>
-						<input class="register_input" id="citizen_front" type="file" placeholder="Citizen Front" name="citizen_front">
+						<input class="upload-doc" id="citizen_front" type="file" placeholder="Citizen Front" name="citizen_front">
 					</div>
 
 					<div>
 						<label for="citizen_back">Citizen Back:</label>
-						<input class="register_input" id="citizen_back" type="file" placeholder="Citizen Back" name="citizen_back" />
+						<input class="upload-doc" id="citizen_back" type="file" placeholder="Citizen Back" name="citizen_back" />
 					</div>
 				</div>
 				<button type="submit" class="btn sumbit">Submit</button>
