--- a/src/main/resources/templates/my_information.html
+++ b/src/main/resources/templates/my_information.html
@@ -83,8 +83,8 @@
                             </div>
                             <div>
                                 <br>
-                                <a th:href="@{/loadfund}" class="btn">Load</a>
-                                <a th:href="@{/refund/collateral}"class="btn btn-danger">Refund</a> 
+                                <a th:href="@{/loadfund}" class="btn btn-primary">Load</a>
+                                <a th:href="@{/refund/collateral}"class="btn">Refund</a> 
                             </div>
                         </div>
                     </div>
