--- a/src/main/resources/static/css/LoginSignup.css
+++ b/src/main/resources/static/css/LoginSignup.css
@@ -55,6 +55,7 @@
     width: 100%  !important;
     font-size: 18px;
     text-align: center;
+    height: 40px !important;
 }
 .btn__login:hover{
     background: var(--color-blue-variant);
