--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -12,8 +12,20 @@
 
 	<div class='full__width' th:insert="fragment/nav.html :: navbar">
 	</div>
-	<div class=" m -3 col text-center">
-		<h1>Sorry, the requested page doesnot exist!!</h1>
-	</div>
+
+	<!-- page not found -->
+	<!-- css are on style.css -->
+	<section>
+		<div class="container notfound__container">
+			<h1>404</h1>
+			<h2>Oops, Page Not Found</h2>
+			<h4>Sorry, the requested page doesnot exist!!</h4>
+			<a href="/">Go Back To Home Page</a>
+		</div>
+	</section>
+	<!-- Footer -->
+	<footer>
+		<footer th:insert="fragment/footer.html :: footer"></footer>
+	</footer>
 </body>
 </html>
