--- a/src/main/resources/templates/fragment/dashboard.html
+++ b/src/main/resources/templates/fragment/dashboard.html
@@ -2,16 +2,21 @@
 <section class="dashboard" th:fragment="dashboard">
     <div class=" dashboard__container">
         <div class="left__dashboard board" th:fragment="left-fragment">
-            <div>
-                <p><a th:href="@{/riskinfo}">Sanolagani Dashboard</a></p>
-                <p><a th:href="@{/myinfo}">My Information</a></p>
-                <a th:href="@{'/investmenthistory/'}">My Investment</a>
-                <div class="dropdown">
-                    <button onclick="manageFund()" class="drop-btn">Manage Fund</button>
+            <div class="dashboard-title-wrap">
+                <div class="dashboard-title"><a th:href="@{/riskinfo}">Dashboard</a></div>
+                <div class="dashboard-title"><a th:href="@{/myinfo}">My Information</a></div>
+                <div class="dashboard-title"><a th:href="@{'/investmenthistory/'}">My Investment</a></div>
+                
+                <div class="dropdown-manage-fund">
+                    <button onclick="manageFund()" class="drop-btn">
+                        Manage Fund
+                        <span>&nbsp;v&nbsp;</span>
+                    </button>
                     <div id="fundManagement" class="fundManagementContent">
-                        <a th:href="@{'/collateralsummery/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral History</a>
-                        <a th:href="@{'/fundhistory/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a>
-                        <a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Settlement</a>
+                        <div> <a th:href="@{'/collateralsummery/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral History</a></div>
+                        
+                        <div><a th:href="@{'/fundhistory/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a></div>
+                        <div><a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Settlement</a></div>
                     </div>
                 </div>
             </div>
