--- a/src/main/resources/static/css/Home.css
+++ b/src/main/resources/static/css/Home.css
@@ -5,6 +5,7 @@
 .home__conatiner{
     display: flex;
     gap: 50px;
+    padding: 2rem 1.5rem;
 }
 .heading__info{
     
@@ -16,9 +17,27 @@
     color: var(--color-gray);
 }
 .home__left{
-    width: 50%;
+    width: 70%;
 
 }
 .home__right{
-    width: 50%;
+    width: 30%;
+}
+.bod{
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 2rem;
+}
+.bod thead th{
+    background-color: black;
+    color: white;
+}
+
+.bod th, .bod td{
+    padding: 1rem;
+    text-align: left;
+}
+
+.bod a{
+    color: var(--color-black);
 }
