--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 @import url('./otp.css');
 @import url('./Nav.css');
-@import url('./MostMomentum.css');
 @import url('./MostFunded.css');
 @import url('./LoginSignup.css');
 @import url('./Invest.css');
@@ -49,6 +48,8 @@
 	--color-background: #f3f3f3;
 	--color-background-variant: #f9f9f9;
 	
+	--color-info-bg: #f8f3e4;
+	--color-info: crimson;
 
 	--transition: all 400ms ease;
 
@@ -79,7 +80,8 @@ body {
 }
 
 h1, h2, h3, h4 {
-	font-weight: 500;
+	font-weight: 400;
+	color: var(--color-dark);
 }
 
 h5 {
